--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>INFO2180 Project 1</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="scripts.js"></script>
+    <script src="images/scripts.js"></script>
 </head>
 <body>
     <header>
@@ -26,7 +26,7 @@
         <section class="overview-hero">
             <div class="container">
                 <div class="overview-hero-image">
-                    <img src="meditate.svg" alt="Meditation">
+                    <img src="images/meditate.svg" alt="Meditation">
                 </div>
                 <div class="overview-hero-text">
                     <h2>Live  your healthiest life now!</h2>
@@ -39,21 +39,21 @@
                 <h2>Learn About</h2>
                 <div class="cards">
                     <div class="card">
-                        <img src="ai.svg" alt="Artificial Intelligence">
+                        <img src="images/ai.svg" alt="Artificial Intelligence">
                         <div class="card-body">
                             <h3>Artificial Intelligence</h3>
                             <p>Learn how our innovations in machine learning are making a positive impact on healthcare.</p>
                         </div>
                     </div>
                     <div class="card">
-                        <img src="fitness.svg" alt="Fitness Tracker">
+                        <img src="images/fitness.svg" alt="Fitness Tracker">
                         <div class="card-body">
                             <h3>Fitness+ Tracker</h3>
                             <p>Fitness+ is our new, engaging and personalized fitness tracking app experience designed to help you stay in shape and feel great.</p>
                         </div>
                     </div>
                     <div class="card">
-                        <img src="health.svg" alt="Exercising">
+                        <img src="images/health.svg" alt="Exercising">
                         <div class="card-body">
                             <h3>Healthy Lifestyle</h3>
                             <p>Being healthy should be part of your overall lifestyle. Living a healthy lifestyle can help prevent chronic diseases and long-term illnesses.Take control of your life with these 5 simple steps.</p>
@@ -77,7 +77,7 @@
             <div class="container">
                 <h2>Recent Stories</h2>
                 <article>
-                    <img src="person-feature.jpg" alt="">
+                    <img src="images/person-feature.jpg" alt="">
                     <div class="article-body">
                         <h3>Dr. Christopher Turk has spent his entire career caring for people’s health and wellbeing.</h3>
                         <p>After years in the healthcare system, Dr. Christopher Turk is bringing together groups of people across the world to take on big healthcare challenges through groundbreaking research and developing tools that support better care.</p>
@@ -85,7 +85,7 @@
                     </div>
                 </article>
                 <article>
-                    <img src="covid-testing.jpg" alt="">
+                    <img src="images/covid-testing.jpg" alt="">
                     <div class="article-body">
                         <h3>INFO2180 Labs collaborates with the Ministry of Health and Ministry of Education on COVID-19 Risk Screening and Testing</h3>
                         <p>INFO2180 Labs, in collaboration with the Ministry of Health and Wellness and Ministry of Education, will launch a pilot project intended to expand access to COVID-19 risk screening and testing for high risk individuals in the parishes of Kingston and St. Andrew.</p>
