--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>INFO2180 Project 1</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="images/scripts.js"></script>
+    <script src="scripts.js"></script>
 </head>
 <body>
     <header>
